--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,10 @@
       "src": "/(.*)",
       "dest": "/app.py"
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.py": {
+      "runtime": "vercel-python@3.9"
+    }
+  }
 }
